// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dll #pop should remove the last node when 1 node 1`] = `
Node {
  "next": null,
  "prev": null,
  "val": "Hello",
}
`;

exports[`dll #pop should remove the last node when 1 node 2`] = `
DoublyLinkedList {
  "head": null,
  "length": 0,
  "tail": null,
}
`;

exports[`dll #pop should remove the last node when multiple nodes 1`] = `
Node {
  "next": null,
  "prev": Node {
    "next": null,
    "prev": null,
    "val": "Hello",
  },
  "val": "World",
}
`;

exports[`dll #pop should remove the last node when multiple nodes 2`] = `
DoublyLinkedList {
  "head": Node {
    "next": null,
    "prev": null,
    "val": "Hello",
  },
  "length": 1,
  "tail": Node {
    "next": null,
    "prev": null,
    "val": "Hello",
  },
}
`;

exports[`dll #push should add a node at the end of the dll when 0 nodes 1`] = `
DoublyLinkedList {
  "head": Node {
    "next": null,
    "prev": null,
    "val": "Hello",
  },
  "length": 1,
  "tail": Node {
    "next": null,
    "prev": null,
    "val": "Hello",
  },
}
`;

exports[`dll #push should add a node at the end of the dll when multiple nodes 1`] = `
DoublyLinkedList {
  "head": Node {
    "next": Node {
      "next": null,
      "prev": [Circular],
      "val": "World",
    },
    "prev": null,
    "val": "Hello",
  },
  "length": 2,
  "tail": Node {
    "next": null,
    "prev": Node {
      "next": [Circular],
      "prev": null,
      "val": "Hello",
    },
    "val": "World",
  },
}
`;

exports[`dll #shift should remove the first node when 1 node 1`] = `
Node {
  "next": null,
  "prev": null,
  "val": "Hello",
}
`;

exports[`dll #shift should remove the first node when 1 node 2`] = `
DoublyLinkedList {
  "head": null,
  "length": 0,
  "tail": null,
}
`;

exports[`dll #shift should remove the first node when multiple nodes 1`] = `
Node {
  "next": null,
  "prev": null,
  "val": "Hello",
}
`;

exports[`dll #shift should remove the first node when multiple nodes 2`] = `
DoublyLinkedList {
  "head": Node {
    "next": null,
    "prev": null,
    "val": "World",
  },
  "length": 1,
  "tail": Node {
    "next": null,
    "prev": null,
    "val": "World",
  },
}
`;

exports[`dll #unshift should remove the first node when multiple nodes 1`] = `
DoublyLinkedList {
  "head": Node {
    "next": Node {
      "next": Node {
        "next": null,
        "prev": [Circular],
        "val": "World",
      },
      "prev": [Circular],
      "val": "Hello",
    },
    "prev": null,
    "val": "Salut",
  },
  "length": 3,
  "tail": Node {
    "next": null,
    "prev": Node {
      "next": [Circular],
      "prev": Node {
        "next": [Circular],
        "prev": null,
        "val": "Salut",
      },
      "val": "Hello",
    },
    "val": "World",
  },
}
`;
